guidewire-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: asm-178-8
  name: demo
