guidewire-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    version: gke
  name: guidewire
  namespace: demo
spec:
  selector:
    matchLabels:
      app: guidewire
  template:
    metadata:
      labels:
        version: gke
        app: guidewire
    spec:
      containers:
        - env:
            - name: PORT
              value: "8080"
            - name: LISTEN_ADDR
              value: 0.0.0.0
          name: server
          image: gcr.io/gft-anthos-demo/pc:v8
          ports:
            - name: liveness-port
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /
              port: liveness-port
            failureThreshold: 30 # takes about 15 mins to setup
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /
              port: liveness-port
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: liveness-port
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            limits:
              cpu: 600m
              memory: 6Gi
            requests:
              cpu: 400m
              memory: 3Gi
      terminationGracePeriodSeconds: 5
