guidewire-app/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: guidewire-gw
  namespace: demo
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http-guidewire
        protocol: HTTP
      hosts:
        - policycenter-gcp.gfthybrid.com
