guidewire-app/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guidewire-vs
  namespace: demo
spec:
  hosts:
    - policycenter-gcp.gfthybrid.com
  gateways:
    - guidewire-gw
  http:
    - route:
        - destination:
            host: guidewire.demo.svc.cluster.local
            port:
              number: 80
          # allowOrigins:
          #   - regex: https://*.gfthybrid.com
